# finalproject_gusar_dpo-nod

./: .gitignore  Makefile  README.md  env.example  main.py  pyproject.toml
.github/workflows/: ruff.yml
data/: rates.json
demos/: full_demo.cast
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: command_parser.py  constants.py  interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  repository.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
