[project]
name = "finalproject-gusar-dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman G",email = "gusar.roman.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prettytable (>=3.16.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
project = "main:main"

[tool.poetry]
 packages = [
     { include = "valutatrade_hub" },
 ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_dir = "data"
users_file = "data/users.json"
portfolios_file = "data/portfolios.json"
rates_file = "data/rates.json"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_path = "logs/actions.log"
parser_log_path = "logs/parser.log"